--- a/public/style.css
+++ b/public/style.css
@@ -82,6 +82,25 @@ body {
   background: url(images/hill-1.png) no-repeat;
   z-index: 10;
 }
+/*
+#cat {
+  position: absolute;
+  top: 440px;
+  left: 540px;
+  width: 53px;
+  height: 60px;
+  background: url(images/cat.png) no-repeat;
+  z-index: 20;
+}
+*/
+#cat_box {
+  position: absolute;
+  top: 400px;
+  left: 500px;
+  width: 400px;
+  height: 200px;
+  border:1px solid red;
+}
 #cat {
   position: absolute;
   top: 440px;
