--- a/particles/public/style.css
+++ b/particles/public/style.css
@@ -1,4 +1,4 @@
 body {
-  background: url(../character/public/images/bg.jpg);
+  background: url(../../common/images/bg.jpg);
   overflow: hidden;
 }
