--- a/particles/public/style.css
+++ b/particles/public/style.css
@@ -40,3 +40,11 @@ body {
   -webkit-transform: rotate(-3deg);
   background: url(images/guy-arm-right.png);
 }
+#grass {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 310px;
+  height: 231px;
+  background: url(images/grass.png);
+}
